# pulumi-azure-native

./: .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .golangci.yml  .goreleaser.arm2pulumi.yml  .goreleaser.prerelease.yml  .goreleaser.yml  CHANGELOG.md  CHANGELOG_OLD.md  CLAUDE.md  CONTRIBUTING.md  FIX_SUMMARY_4400.md  Gopkg.toml  Makefile  NOTICE  README.md  a.sh  cpu.prof  gen-major-version.sh  go.mod  go.sum  implementation_guide.md  implementation_guide_api_spec.md  makefile-full.dot  makefile-simplified.dot  merge.py  mise.toml  package.json
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/pulumi_azure_native/: __init__.py  _tables.py  _utilities.py  provider.py  pulumi-plugin.json
sdk/python/pulumi_azure_native/aad/: __init__.py  _enums.py  _inputs.py  domain_service.py  get_domain_service.py  get_ou_container.py  ou_container.py  outputs.py
sdk/python/pulumi_azure_native/aadiam/: __init__.py  _enums.py  _inputs.py  azure_ad_metric.py  diagnostic_setting.py  get_azure_ad_metric.py  get_diagnostic_setting.py  get_private_endpoint_connection.py  get_private_link_for_azure_ad.py  getazure_ad_metric.py  getprivate_link_for_azure_ad.py  outputs.py  private_endpoint_connection.py  private_link_for_azure_ad.py
sdk/python/pulumi_azure_native/addons/: __init__.py  outputs.py  (+2 more)
sdk/python/pulumi_azure_nextgen/: README.md  __init__.py  _tables.py  provider.py
sdk/python/pulumi_azurerm/: README.md  __init__.py  _tables.py  _utilities.py  get_resource.py  get_resource_group.py  provider.py  resource.py  resource_group.py  tables.py  utilities.py
(+554074 files in other folders)
