[project]
  name = "pulumi_azure_native"
  description = "A native Pulumi package for creating and managing Azure resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.35.0,<4.0.0", "semver>=2.8.1"]
  keywords = ["pulumi", "azure", "azure-native", "category/cloud", "kind/native"]
  readme = "README.md"
  requires-python = ">=3.7"
  version = "0.0.0"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://pulumi.com"
    Repository = "https://github.com/pulumi/pulumi-azure-native"
