[project]
  name = "pulumi_azure_native"
  description = "A native Pulumi package for creating and managing Azure resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.142.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11; python_version < \"3.11\""]
  keywords = ["pulumi", "azure", "azure-native", "category/cloud", "kind/native"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "3.0.0"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://pulumi.com"
    Repository = "https://github.com/pulumi/pulumi-azure-native"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_azure_native = ["py.typed", "pulumi-plugin.json"]
